# dim-and-dimmer

./: .woodpecker.yml  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
assets/: dim-and-dimmer.desktop
src/: app.rs  commands.rs  ddc.rs  display.rs  main.rs  ui.rs
src/gamma/: mod.rs  wayland.rs  x11.rs
