[package]
name = "dim-and-dimmer"
version = "0.0.2"
edition = "2024"
license = "MIT"
description = "Control external monitor brightness/contrast via DDC-CI"
repository = "https://codeberg.org/ryankilleen/dim-and-dimmer"
keywords = ["monitor", "brightness", "ddc", "gui"]
categories = ["gui", "hardware-support"]
readme = "README.md"

[dependencies]
eframe = "0.33"
egui = "0.33"

[profile.release]
strip = true
opt-level = "z"
